# GAS-Open-Source-Games-2026

./: README.md  main.py  pyproject.toml
data/: 1_initial_itch_data.csv  Dataset_Final_GAS.csv
src/: detect_engine.py  download_games.py  filter.py  gh_client.py  list_docs.py  list_files.py  list_tests.py  merge_engines_llm.py  merge_summaries.py  rq_1_GAS.ipynb  rq_2_GAS.ipynb  rq_3_GAS.ipynb  rq_4_GAS.ipynb
