[project]
name = "open-games-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.3.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "ydata-profiling>=4.17.0",
    "setuptools>=70.0.0",
    "chardet>=5.2.0",
]
